新增了自己的SDK，把接口的签名认证封装为依赖包了，初具雏形；解决了接口可能会重定向的问题；完善了interfaceInfo的表结构，新增了调用接口的方法；为user的ak和sk添加了随机生成功能

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+<!--        自己写的发送http请求的maven-->
+        <dependency>
+            <groupId>com.pjh</groupId>
+            <artifactId>pjhApi-client-SDK</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
